--- a/desktop/package.json
+++ b/desktop/package.json
@@ -3,19 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@9.12.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build && electron-builder",
+    "build": "tsc -b && vite build && electron-builder",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.300.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "electron": "^39.2.7",
     "electron-builder": "^26.0.12",
     "esbuild": "^0.27.2",
@@ -23,7 +29,9 @@
     "vite": "npm:rolldown-vite@7.2.5",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vue-tsc": "^3.1.4"
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
