--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,10 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.300.0",
-    "clsx": "^2.1.0",
+    "react-image-crop": "^11.0.10",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
@@ -22,16 +23,16 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.0",
     "electron": "^39.2.7",
     "electron-builder": "^26.0.12",
     "esbuild": "^0.27.2",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5",
     "vite-plugin-electron": "^0.29.0",
-    "vite-plugin-electron-renderer": "^0.14.6",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "vite-plugin-electron-renderer": "^0.14.6"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
